tests/invalid/invalid_var_decl.c
// FAIL
int main() {
    int 3var = 5;
    return 0;
}
